# CanBoot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
arch/aarch64/: aarch64_entry.c  bootstrap.S  fdt.c  fdt.h  irq.c  vectors.S
arch/x86_64/: ap_trampoline.S  bios_entry.c  bootstrap.S  idt.c  idt.h  idt_stubs.S  kmain.c  lapic.c  lapic.h  mb2_parse.c  power.c  rtc.c  smp.c  smp.h
boot/multiboot2/: header.S
boot/uefi/: efi_main.c  efi_main_aarch64.c
cando_port/: cando_audio_lib.c  cando_crypto_lib.c  cando_display_lib.c  cando_encoding_lib.c  cando_file_lib.c  cando_fmt_lib.c  cando_fs_lib.c  cando_image_lib.c  cando_input_lib.c  cando_partition_lib.c  cando_pci_lib.c  cando_stubs.c  cando_time_lib.c  cando_tls_lib.c  lwext4_canboot_glue.c  lwext4_canboot_io.c  ntfs3g_canboot_glue.c  ntfs3g_canboot_io.c  ntfs3g_canboot_shim.h  ntfs3g_mkntfs_main_rename.h
cando_port/jit/: codegen_aarch64.c  codegen_stub_aarch64.c
cando_port/lib/: audio.c  crypto.c  disk.c  env.c  error.c  error.h  fb.c  file.c  fmt.c  fs.c  http.c  input.c  log.c  net.c  os.c  random.c  time.c  tls.c  url.c
cando_port/net_posix/: openssl_mbedtls.c  openssl_stub.c  sockets.c
cando_port/runtime/: stubs.c
cando_port/shims/: dirent.h  dlfcn.h  getopt.h  netdb.h  termios.h
cando_port/shims/arpa/: inet.h
cando_port/shims/netinet/: in.h  tcp.h
cando_port/shims/openssl/: bio.h  err.h  pem.h  sha.h  ssl.h  x509.h  x509v3.h
cando_port/shims/sys/: ioctl.h  mman.h  socket.h  syscall.h  sysinfo.h  syslog.h  utsname.h
cando_port/vendor_glue/lwext4/: glue.c  io.c  io.h
cando_port/vendor_glue/minimp3/: decoder.c
cando_port/vendor_glue/ntfs3g/: glue.c  mkntfs_main_rename.h
cando_port/vendor_glue/stb/: image.c
cmake/: mbedtls.cmake  picolibc-aarch64.cross.in  picolibc-x86_64.cross.in  picolibc.cmake  sources.cmake  toolchain-aarch64.cmake  uefi_aarch64.cmake  uefi_x86_64.cmake
docs/: README.md  adding-libs.md  architecture.md  audio-stack.md  bootflow.md  building.md  filesystems.md  hal.md  networking.md  release.md  running.md  testing.md  vendoring.md
docs/api/: README.md  audio.md  base64.md  crypto.md  derma.md  disk.md  display.md  env.md  error.md  fb.md  file.md  fmt.md  fs.md  gui.md  hex.md  http.md  https.md  image.md  input.md  io.md  log.md  media.md  net.md  os.md  partition.md  pci.md  random.md  storage.md  system.md  time.md  tls.md  url.md
docs/internal/: cando-stdlib-surface.md
fs/: fat32.c  fat32.h  iso9660.c  iso9660.h  ntfs.c  ntfs.h  partition.c  partition.h  vfs.c
hal/audio/: ac97.c  audio_stub.c  audio_x86.c  audio_x86.h  intel_hda.c  virtio_snd.c
hal/console/: serial_aarch64.c  serial_x86.c
hal/disk/: ahci.c  disk.c  nvme.c  usb_storage.c  virtio_blk.c
hal/display/: display.c  virtio_gpu.c
hal/include/hal/: audio.h  console.h  disk.h  display.h  input.h  net.h  pci.h  power.h  rng.h  rtc.h  virtio.h
hal/input/: input_queue.c  input_stub_aarch64.c  ps2.c  virtio_input.c
hal/net/: e1000.c  e1000e.c  net.c  pcnet.c  rtl8139.c  virtio_net.c
hal/pci/: pci_aarch64.c  pci_x86.c
hal/rng/: virtio_rng.c
hal/usb/: xhci.c  xhci.h
hal/virtio/: virtio_pci.c
include/: canboot.h
initramfs/: derma.cdo  derma_demo.cdo  gui.cdo  gui_demo.cdo  init.cdo
kernel/: canboot_test_ca.c  env.c  fb.c  kmain.c  kmain_aarch64.c  kmain_aarch64_stub.c  m5_selftest.c  m6_nettest.c  m7_tlstest.c  m8_disktest.c  m9_candotest.c
kernel/include/canboot/: boot_info.h  env.h
linker/: kernel.aarch64.ld  kernel.x86_64.ld
modules/: README.md
modules/gui/: README.md  gui.cdo  gui.md
net/: tftp.c  tftp.h
net/lwip_port/: netboot.c  resolver.c  sys_arch.c
net/lwip_port/include/: canboot_resolver.h  lwipopts.h  netboot_hooks.h
net/lwip_port/include/arch/: cc.h
net/mbedtls_port/: entropy.c  inet_pton.c  lwip_bio.c  lwip_bio.h
net/mbedtls_port/include/: canboot_mbedtls_user_config.h
rt/picolibc_port/: syscalls.c
rt/pthread_stub/: pthread.c
rt/pthread_stub/include/: pthread.h
rt/sched/: sched.c
rt/sched/arch/: ctx_aarch64.S  ctx_x86_64.S
rt/sched/include/sched/: percpu.h  sched.h  waitq.h
rt/sync/include/sync/: cpu.h  spinlock.h
scripts/: build-picolibc.sh  embed-test-ca.sh  mkdisk-aarch64-uefi.sh  mkdisk-ext4.sh  mkdisk-fat32.sh  mkdisk-ntfs.sh  mkiso-bios.sh  mkiso-uefi.sh  mkpxe.sh
scripts/mkdisk/: aarch64-uefi-multi.sh  aarch64-uefi.sh  fat32.sh  ntfs.sh
scripts/mkiso/: bios.sh  uefi.sh
tests/: run-qemu-aarch64-uefi.sh  run-qemu-aarch64.sh  run-qemu-bios.sh  run-qemu-uefi.sh
tests/refs/: m11-bios.ppm.sha256  m11-uefi.ppm.sha256
tests/selftest/: ca.c  cando.c  disk.c  embed-test-ca.sh  net.c  runtime.c  tls.c
tests/sidecars/: dns_fixed.py  http_hello.py  https_secure.py  udp_echo.py
tests/sidecars/tls/: canboot-test.key  canboot-test.pem
